# Ahold_product_detector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  environment.yml  pyproject.toml
launch/: compressed_image.launch  detect.launch  detect_2.launch  detect_without_robot.launch  robot.launch  shelf_detect.launch
msg/: ProductPose.msg
scripts/: clean_detector.py  detector.py  detector_2.py  multi_object_tracker.py  no_test.py  orientation_estimator.py  pmf_data_helpers.py  pmf_interface.py  pose_estimator.py  predict_shelf.py  roi_selector.py  rotation_compensation.py  tracker.py  tracker_2.py
scripts/pmf/: .gitignore  README.md  calc_mean.py  engine.py  linux_env.yml  main.py  slurm_run_train_job.sh  slurm_test_model_jobs.sh  test.py
scripts/pmf/datasets/: __init__.py  custom.py  episodic_dataset.py
scripts/pmf/models/: protonet.py  vision_transformer.py
scripts/pmf/utils/: args.py
srv/: AddClass.srv  ChangeProduct.srv  GetClassNames.srv  GetCroppedImages.srv  SetDetectionClass.srv
